# optimisation_toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES.md  Dockerfile  LICENSE  Makefile  PRODUCTION_ROADMAP.md  README.md  README_DEPLOYMENT.md  SECURITY.md  blog_post.md  deploy_to_github.bat  docker-compose.yml  example_usage.py  fix_ci.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_full_pipeline.bat  run_system.bat  setup.py  setup_ci.bat  setup_docker.bat  setup_environment.bat  setup_git.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  security.yml
benchmarks/: performance_profiler.py  scipy_comparison.py
ml_examples/: __init__.py  logistic_regression_optimization.py  neural_network_optimization.py
notebooks/: optimization_demo.ipynb
optimization_toolkit/: __init__.py
optimization_toolkit/algorithms/: __init__.py
optimization_toolkit/algorithms/gradient_based/: __init__.py  adam.py  lbfgs.py  rmsprop.py  sgd.py
optimization_toolkit/core/: __init__.py  base_optimizer.py  exceptions.py  result.py  validation.py
optimizers/: __init__.py  adam.py  base.py  lbfgs.py  rmsprop.py  sgd.py
test_functions/: __init__.py  base.py  beale.py  rastrigin.py  rosenbrock.py  sphere.py
tests/: test_function_classes.py  test_optimizers.py  test_performance.py
visualization/: __init__.py  analysis.py  convergence.py  landscape.py
